@@ -10,6 +10,9 @@
     <name>fluppy-box</name>
 
     <properties>
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>21</maven.compiler.release>
         <sonar.organization>notamethod</sonar.organization>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javafx.version>21.0.6</javafx.version>
@@ -94,6 +97,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.17.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.bytebuddy</groupId>
+                    <artifactId>byte-buddy</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -110,8 +119,23 @@
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>7.1.0.Final</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hibernate.orm</groupId>
+                    <artifactId>hibernate-bytecode-bytebuddy</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>net.bytebuddy</groupId>
+                    <artifactId>byte-buddy</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-graalvm</artifactId>
+            <version>7.1.0.Final</version>
 
+        </dependency>
         <!-- H2 Database -->
         <dependency>
             <groupId>com.h2database</groupId>
@@ -119,6 +143,14 @@
             <version>2.2.224</version>
         </dependency>
 
+
+        <!-- à partir de graalvm21, anootation dispo pour RegisterForReflection
+                    <dependency>-->
+        <!--            <groupId>org.graalvm.nativeimage</groupId>-->
+        <!--            <artifactId>svm</artifactId>-->
+        <!--            <version>23.1.2</version>-->
+        <!--            <scope>provided</scope>-->
+        <!--        </dependency>-->
 
     </dependencies>
 
@@ -129,8 +161,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>25</source>
-                    <target>25</target>
+                    <release>${maven.compiler.release}</release>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -143,74 +174,57 @@
                             <version>1.6.3</version>
                         </path>
                     </annotationProcessorPaths>
+                    <fork>true</fork>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <executions>
-                    <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
-                        <id>default-cli</id>
-                        <configuration>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
-                            <noManPages>true</noManPages>
-                            <stripDebug>true</stripDebug>
-                            <noHeaderFiles>true</noHeaderFiles>
-                        </configuration>
-                    </execution>
-                </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.notamethod.fluppy.gui.GamesWall</mainClass>
+
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
 
 
         </plugins>
     </build>
     <profiles>
-
         <profile>
-            <id>mainjar</id>
+            <id>native</id>
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-shade-plugin</artifactId>
-                        <version>3.6.1</version>
-                        <configuration>
-                            <filters>
-                                <filter>
-                                    <artifact>*:*</artifact>
-                                    <excludes>
-                                        <exclude>META-INF/*.SF</exclude>
-                                        <exclude>META-INF/*.DSA</exclude>
-                                        <exclude>META-INF/*.RSA</exclude>
-                                        <exclude>com/sun/glass/**</exclude>
-                                    </excludes>
-
-                                </filter>
-                                <filter>
-                                    <artifact>org.openjfx:*</artifact>
-                                    <excludes>
-                                        <exclude>**</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
-                        </configuration>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>0.11.4</version>
+                        <extensions>true</extensions>
                         <executions>
                             <execution>
-                                <phase>package</phase>
+                                <id>native-image</id>
                                 <goals>
-                                    <goal>shade</goal>
+                                    <goal>compile-no-fork</goal>
                                 </goals>
+                                <phase>package</phase>
                                 <configuration>
-                                    <transformers>
-                                        <transformer
-                                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                            <mainClass>com.notamethod.fluppy.gui.GamesWall</mainClass>
-                                        </transformer>
-                                    </transformers>
+
+                                    <imageName>fluppy</imageName>
+                                    <mainClass>com.notamethod.fluppy.gui.GamesWall</mainClass>
+
+                                    <!-- Options recommandées pour JavaFX -->
+                                    <buildArgs>
+                                        <!-- Supprime la console Windows -->
+                                        <buildArg>-H:WindowsSubsystem=windows</buildArg>
+                                        <buildArg>--no-fallback</buildArg>
+                                        <buildArg>--enable-url-protocols=http,https</buildArg>
+                                        <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
+                                    </buildArgs>
                                 </configuration>
                             </execution>
                         </executions>
@@ -219,6 +233,6 @@
             </build>
         </profile>
 
-
     </profiles>
 </project>
+
